syntax = "proto3";

option go_package = "gitlab.ozon.dev/dimayasha7123/homework-2-dimayasha-7123/api";

package api;

import "google/protobuf/empty.proto";

message Quiz {
  int64 ID = 1;
  string Name = 2;
}

message QuizList {
  repeated Quiz QList = 1;
}

message QuizParty {
  int64 UserID = 1;
  int64 QuizID = 2;
}

message Question {
  int64 ID = 1;
  string Title = 2;
  repeated string AnswerOptions = 3;
}

message QuestionOrNil {
  bool ok = 1;
  optional Question question = 2;
}

message Answer {
  int64 UserID = 1;
  int64 QuestionID = 2;
  repeated int32 RightOptionNumbers = 3;
}

message PartyResults {
  int64 PointCount = 1;
  int64 PenaltyTime = 2;
  int64 Place = 3;
}

message SingleTop{
  PartyResults UserResults = 1;
  GlobalTop QuizTop = 2;
}

message GlobalTop{
  repeated PartyResults Results = 1;
}

message Username {
  string Name = 1;
}

message ID {
  int64 ID = 1;
}

message UserID {

}

message AnswerReq {
  int64 UserID = 1;
  int64 AnswerID = 2;
}

service QuizService {
  rpc AddUser(Username) returns(ID) {} // UserID
  rpc GetQuizList(google.protobuf.Empty) returns (QuizList) {}
  rpc CreateQuizParty(QuizParty) returns (ID) {} // QuizID
  rpc GetNextQuestion(ID) returns (QuestionOrNil) {} // QuizID
  rpc SendAnswer(Answer) returns (google.protobuf.Empty) {}
  rpc GetQuizPartyTop() returns () {}
  rpc GetQuizTop(QuizPartyID) returns (SingleTop) {}
  rpc GetGlobalQuizTop(ID) returns (GlobalTop) {}
}
